--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "repository": "github:internetarchive:openlibrary",
   "license": "AGPL-3.0",
   "scripts": {
-    "build-assets": "make js && make css",
+    "build-js": "make js && NODE_ENV=production webpack --mode=production",
+    "build-assets": "npm run build-js && make css",
     "check-bundles": "npm run build-assets && bundlesize",
     "svg-min": "svgo static/images/**/*.svg && svgo static/images/*.svg",
     "lint:fix": "stylelint --syntax less --fix static/css/",
@@ -62,7 +63,8 @@
     "prebuild-install": "^5.2.1",
     "stylelint": "^9.5.0",
     "stylelint-declaration-use-variable": "^1.7.0",
-    "svgo": "^1.1.1"
-  },
-  "dependencies": {}
+    "svgo": "^1.1.1",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
+  }
 }
